--- a/stylegan2-download-and-extract-data.yaml
+++ b/stylegan2-download-and-extract-data.yaml
@@ -17,10 +17,10 @@
 #
 # The user needs to create their own Gradient managed datasets for job outputs to replace the IDs this file contains:
 #
-# getCatImageDatabase -> "dstlbm17s9ib1ld"
-# extractImages       -> "dstfq4pfrtz4fav"
+# getCatImageDatabase -> "dsrupsu443jcwrd" #"dstlbm17s9ib1ld"
+# extractImages       -> "dsrlrvzgqhtcy7o" #"dstfq4pfrtz4fav"
 #
-# Last updated: May 20th 2021
+# Last updated: Aug 05th 2021
 
 # Our download and extract steps do not require a GPU, so we default to a C5 machine for all steps
 
@@ -42,32 +42,31 @@ jobs:
       catImageDatabase:
         type: dataset
         with:
-          id: "dstlbm17s9ib1ld"
-    uses: container@v1
+          ref: "dsrupsu443jcwrd"
+    uses: script@v1
     with:
-      args:
-        - bash
-        - -c
-        - |-
-          curl -o /outputs/catImageDatabase/cat.zip.md5 'http://dl.yf.io/lsun/objects/cat.zip.md5'
-          curl -C - -o /outputs/catImageDatabase/cat.zip 'http://dl.yf.io/lsun/objects/cat.zip'
-          cd /outputs/catImageDatabase
-          split -a 3 -b 100m cat.zip cat_files_
-          echo "MD5 sum from downloaded file:"
-          md5sum cat.zip
-          echo "MD5 sum from website:"
-          cat /outputs/catImageDatabase/cat.zip.md5
-          rm cat.zip
-          ls "-aFlR" /outputs/catImageDatabase
+      script: |-
+        curl -o /outputs/catImageDatabase/cat.zip.md5 'http://dl.yf.io/lsun/objects/cat.zip.md5'
+        curl -C - -o /outputs/catImageDatabase/cat.zip 'http://dl.yf.io/lsun/objects/cat.zip'
+        cd /outputs/catImageDatabase
+        split -a 3 -b 100m cat.zip cat_files_
+        echo "MD5 sum from downloaded file:"
+        md5sum cat.zip
+        echo "MD5 sum from website:"
+        cat /outputs/catImageDatabase/cat.zip.md5
+        rm cat.zip
+        ls "-aFlR" /outputs/catImageDatabase
       image: tensorflow/tensorflow:1.14.0-gpu-py3
+
+  #"dstlbm17s9ib1ld"
 
   # 2. Clone StyleGAN2 repo for script that extracts images from the LMDB-format database
 
-  # Checkout results in an output volume, so we don't need the "outputs:" field
+  # The checkout results in an output volume
   # The repo is public so the "username:" field, and "env:" field containing a Git password are not needed
 
   cloneStyleGAN2Repo:
-    inputs:
+    outputs:
       repo:
         type: volume
     uses: git-checkout@v1
@@ -81,7 +80,7 @@ jobs:
   # The extracted images then become the Gradient managed dataset that can be referred to in later steps
   # This avoids having to download the images again in those steps
   # The needed installations could also be done via a requirements.txt
-  # /inputs is read-only so we do copy not move as move's delete step will fail
+  # /inputs is read-only so we do copy not move (mv) as move's delete step will fail
   # Note the repo gets put in /inputs/repo, not /inputs/repo/stylegan2
   # Note the Python and bash syntaxes that are placing those commands on one line within the "|-" script
 
@@ -90,54 +89,50 @@ jobs:
       - getCatImageDatabase
       - cloneStyleGAN2Repo
     inputs:
-      repo:
-        type: volume
+      repo: cloneStyleGAN2Repo.outputs.repo
       catImageDatabase: getCatImageDatabase.outputs.catImageDatabase
     outputs:
       extractedImages:
         type: dataset
         with:
-          id: "dstfq4pfrtz4fav"
-    uses: container@v1
+          ref: "dsrlrvzgqhtcy7o" #"dstfq4pfrtz4fav"
+    uses: script@v1
     with:
-      args:
-        - bash
-        - -c
-        - |-
-          cd /inputs/catImageDatabase
-          mkdir -p /cat_workspace/catImagesReconstructed
-          mkdir /cat_workspace/catImagesUnzipped
-          cat cat_files_* > /cat_workspace/catImagesReconstructed/cat_reconstructed.zip
-          md5sum /cat_workspace/catImagesReconstructed/cat_reconstructed.zip
-          unzip /cat_workspace/catImagesReconstructed/cat_reconstructed.zip -d /cat_workspace/catImagesUnzipped
-          rm /cat_workspace/catImagesReconstructed/cat_reconstructed.zip
-          pip install --upgrade pip
-          pip install scipy==1.3.3
-          pip install requests==2.22.0
-          pip install Pillow==6.2.1
-          pip install lmdb==1.2.1
-          pip install python-lmdb==1.0.0b1
-          apt-get update
-          apt-get install ffmpeg libsm6 libxext6  -y
-          pip install opencv-python==4.5.1.48
-          cp -R /inputs/repo /stylegan2
-          cd /stylegan2
-          python dataset_tool.py create_lsun \
-            /outputs/extractedImages/cat_images_tfrecords \
-            /cat_workspace/catImagesUnzipped/cat \
-            --resolution=256 \
-            --max_images=1000
-          rm -r /cat_workspace/catImagesUnzipped
-          cd /outputs/extractedImages/cat_images_tfrecords
-          mkdir cat
-          mv *.tfrecords cat
-          cd cat
-          for res in 2 3 4 5 6 7 8; do \
-            gzip cat_images_tfrecords-r0$res.tfrecords; \
-            split -a 3 -b 100m cat_images_tfrecords-r0$res.tfrecords.gz cat_images_tfrecords-r0${res}_; \
-          done
-          rm cat_images_tfrecords-r0?.tfrecords.gz
-          ls "-aFlR" /outputs/extractedImages
+      script: |-
+        cd /inputs/catImageDatabase
+        mkdir -p /cat_workspace/catImagesReconstructed
+        mkdir /cat_workspace/catImagesUnzipped
+        cat cat_files_* > /cat_workspace/catImagesReconstructed/cat_reconstructed.zip
+        md5sum /cat_workspace/catImagesReconstructed/cat_reconstructed.zip
+        unzip /cat_workspace/catImagesReconstructed/cat_reconstructed.zip -d /cat_workspace/catImagesUnzipped
+        rm /cat_workspace/catImagesReconstructed/cat_reconstructed.zip
+        pip install --upgrade pip
+        pip install scipy==1.3.3
+        pip install requests==2.22.0
+        pip install Pillow==6.2.1
+        pip install lmdb==1.2.1
+        pip install python-lmdb==1.0.0b1
+        apt-get update
+        apt-get install ffmpeg libsm6 libxext6  -y
+        pip install opencv-python==4.5.1.48
+        cp -R /inputs/repo /stylegan2
+        cd /stylegan2
+        python dataset_tool.py create_lsun \
+          /outputs/extractedImages/cat_images_tfrecords \
+          /cat_workspace/catImagesUnzipped/cat \
+          --resolution=256 \
+          --max_images=1000
+        rm -r /cat_workspace/catImagesUnzipped
+        cd /outputs/extractedImages/cat_images_tfrecords
+        mkdir cat
+        mv *.tfrecords cat
+        cd cat
+        for res in 2 3 4 5 6 7 8; do \
+          gzip cat_images_tfrecords-r0$res.tfrecords; \
+          split -a 3 -b 100m cat_images_tfrecords-r0$res.tfrecords.gz cat_images_tfrecords-r0${res}_; \
+        done
+        rm cat_images_tfrecords-r0?.tfrecords.gz
+        ls "-aFlR" /outputs/extractedImages
       image: tensorflow/tensorflow:1.14.0-gpu-py3
 
   # Appendix: Extra details
