Update and rename stylegan2-train-and-evaluate-model.yaml to .gradient/workflows/stylegan2-train-and-evaluate-model.yaml

--- a/.gradient/workflows/stylegan2-train-and-evaluate-model.yaml
+++ b/.gradient/workflows/stylegan2-train-and-evaluate-model.yaml
@@ -1,3 +1,8 @@
+on:
+  github:
+    branches:
+      only: main
+
 # StyleGAN2 Workflow 2 of 2: Train and evaluate model
 #
 # This is the YAML file used to run the Gradient modeling Workflow for the sample project based on StyleGAN2 at
