--- a/.gradient/workflows/stylegan2-download-and-extract-data.yaml
+++ b/.gradient/workflows/stylegan2-download-and-extract-data.yaml
@@ -50,7 +50,7 @@ jobs:
       catImageDatabase:
         type: dataset
         with:
-          ref: demo-dataset
+          ref: stylegan-w1of2-cat-image-database
     uses: script@v1
     with:
       script: |-
@@ -101,7 +101,7 @@ jobs:
       extractedImages:
         type: dataset
         with:
-          ref: demo-dataset
+          ref: stylegan-w1of2-extracted-images
     uses: script@v1
     with:
       script: |-
